--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ h5py>=2.8
 pillow
 peakutils
 requests
+fontconfig
 scikit-image
 scikit-learn
 asteval>=0.9.19
@@ -20,12 +21,15 @@ pyshortcuts>=1.7
 wxpython>=4.0.4
 wxutils>=0.2.3
 wxmplot>=0.9.43
-xraydb>=4.3
+xraydb>=4.4
 pip
+setuptools
 pyyaml
 psutil
 nose
 pytest
 termcolor
 silx>=0.12
+yaml
+pyyaml
 
