--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: python
 sudo: false
 
 python:
-    - 3.7-dev
+    - 3.8
 
 before_install:
     - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
@@ -16,11 +16,10 @@ before_install:
     - conda info -a
 
 install:
-    - conda create -q -n xlarch python=3.7 numpy scipy matplotlib sqlalchemy requests pandas scikit-image scikit-learn h5py wxpython yaml pyyaml pip
+    - conda create -q -n xlarch python=3.8 numpy scipy matplotlib sqlalchemy requests pandas scikit-image scikit-learn h5py wxpython yaml pyyaml pip
     - source activate xlarch
     - pip install dill nose peakutils pillow psutil psycopg2 pyepics pytest silx sphinx termcolor xraydb lmfit asteval pycifrw pint
-    - conda install -c gsecars dioptas pyfai tomopy uncertainties wxutils wxmplot patchelf pango pcre
-    - pip install pyshortcuts==1.5
+    - conda install -c gsecars dioptas pyfai tomopy uncertainties wxutils wxmplot patchelf pango pcre pyshortcuts
     - python setup.py install
     - conda list
 
