update test script

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,14 @@ before_install:
     - hash -r
     - conda config --set always_yes yes --set changeps1 no
     - conda config --add channels gsecars
+    - conda config --add channels conda-forge
     - conda info -a
 
 install:
-    - conda create -q -n xlarch python=3.8 numpy scipy matplotlib sqlalchemy requests pandas scikit-image scikit-learn h5py wxpython yaml pyyaml pip
+    - conda create -q -n xlarch python=3.8 numpy scipy matplotlib h5py sqlalchemy scikit-image scikit-learn h5py wxpython pyyaml requests
     - source activate xlarch
     - pip install dill nose peakutils pillow psutil psycopg2 pyepics pytest silx sphinx termcolor xraydb lmfit asteval pycifrw pint
-    - conda install -c gsecars dioptas pyfai tomopy uncertainties wxutils wxmplot patchelf pango pcre pyshortcuts
+    - conda install -c gsecars dioptas pyfai tomopy uncertainties wxutils wxmplot patchelf pango pcre pyshortcuts pandas
     - python setup.py install
     - conda list
 
