--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,20 +1,17 @@
 
 environment:
   matrix:
-    - PYTHON_VERSION: "3.7"
+    - PYTHON_VERSION: "3.8"
       MINICONDA: "C:\\Miniconda36-x64"
 
 install:
     - "%MINICONDA%\\Scripts\\activate.bat"
     - conda config --set always_yes True
-    - conda config --add channels gsecars
+    - conda config --add channels conda-forge
     - conda update conda
     - conda info -a
-    - conda install python=3.7 numpy scipy matplotlib sqlalchemy requests pandas scikit-image scikit-learn h5py wxpython yaml pyyaml pip
-    - pip install dill nose peakutils pillow psutil psycopg2 pyepics pytest silx sphinx termcolor
-    - pip install asteval lmfit pycifrw pyfai pyshortcuts uncertainties wxutils wxmplot xraydb
-### - conda install dioptas tomopy
-
+    - conda install python=3.8 numpy scipy matplotlib h5py sqlalchemy scikit-image scikit-learn cython pillow psutil pandas nose pytest pyyaml patchelf pango pcre sphinx dill pint psycopg2 pyfai pycifrw silx tomopy wxpython
+    - pip install lmfit peakutils pyepics pyshortcuts termcolor xraydb wxmplot wxutils
 
 build_script:
     - python.exe setup.py install
