--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,7 @@ install:
     - conda config --add channels conda-forge
     - conda update conda
     - conda info -a
-    - conda install python=3.8 numpy scipy matplotlib h5py sqlalchemy scikit-image scikit-learn cython pillow psutil pandas nose pytest pyyaml patchelf pango pcre sphinx dill pint psycopg2 pyfai pycifrw silx tomopy wxpython
+    - conda install python=3.8 numpy scipy matplotlib h5py sqlalchemy scikit-image scikit-learn cython pillow psutil pandas nose pytest pyyaml sphinx dill pyfai pycifrw silx tomopy wxpython
     - pip install lmfit peakutils pyepics pyshortcuts termcolor xraydb wxmplot wxutils
 
 build_script:
