--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ recursive-include larch *
 recursive-include tests *
 recursive-include examples *
 recursive-exclude larch *.pyc
+recursive-exclude tests *.pyc
 recursive-exclude larch __pycache__
 recursive-exclude tests __pycache__
 recursive-exclude examples __pycache__
