--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 # List of all dependencies of larch
 # Recommended installation with conda:
-# conda config --env --append channels GSECARS
-# conda config --env --append channels conda-forge
-# conda install --file ./requirements.txt
+# conda install -yc conda-forge wxpython tomopy
+# pip install xraylarch
 packaging
 pip
 pyyaml
