--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,12 +6,13 @@ environment:
 
 install:
     - "%MINICONDA%\\Scripts\\activate.bat"
-    - conda config --set always_yes True
+    - conda config --set always_yes yes --set changeps1 no
     - conda config --add channels conda-forge
-    - conda update conda
+    - conda install numpy=>1.20 scipy=>1.5 matplotlib=>3.0 h5py pip setuptools pyparsing pytest pytest-cov coverage scikit-learn cython pillow pandas sqlalchemy psutil pyyaml psycopg2-binary numdifftools emcee pymatgen
+    - conda install tomopy wxpython
     - conda info -a
-    - conda install python=3.8 numpy scipy matplotlib h5py sqlalchemy scikit-image scikit-learn cython pillow psutil pandas nose pytest pyyaml sphinx dill pyfai pycifrw silx tomopy wxpython
-    - pip install lmfit peakutils pyepics pyshortcuts termcolor xraydb wxmplot wxutils
+    - conda list
+    - pip install lmfit peakutils pyepics pyshortcuts termcolor sphinx dill pycifrw xraydb wxmplot wxutils
 
 build_script:
     - python.exe setup.py install
