--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,11 +8,10 @@ install:
     - "%MINICONDA%\\Scripts\\activate.bat"
     - conda config --set always_yes yes --set changeps1 no
     - conda config --add channels conda-forge
-    - conda install numpy=>1.20 scipy=>1.5 matplotlib=>3.0 h5py pip setuptools pyparsing pytest pytest-cov coverage scikit-learn cython pillow pandas sqlalchemy psutil pyyaml psycopg2-binary numdifftools emcee pymatgen
-    - conda install tomopy wxpython
+    - conda install -yc conda-forge python=3.8.10 numpy=>1.20 scipy=>1.5 matplotlib=>3.0 h5py pip setuptools pyparsing pytest pytest-cov coverage scikit-learn cython pillow pandas sqlalchemy psutil pyyaml psycopg2-binary numdifftools emcee pymatgen tomopy wxpython
     - conda info -a
     - conda list
-    - pip install lmfit peakutils pyepics pyshortcuts termcolor sphinx dill pycifrw xraydb wxmplot wxutils
+    - pip install lmfit pyepics pyshortcuts termcolor sphinx dill pycifrw xraydb wxmplot wxutils
 
 build_script:
     - python.exe setup.py install
