--- a/.github/workflows/test-on-windows.yml
+++ b/.github/workflows/test-on-windows.yml
@@ -1,14 +1,14 @@
-name: Test with Conda
+name: Test with Conda, Windows
 
 on: [push]
 
 jobs:
-  test:
+  build:
+    runs-on: windows-latest  
     strategy:
       max-parallel: 5
       fail-fast: false
       matrix:
-        platform: [ubuntu-latest, windows-latest]
         python-version: ['3.7', '3.8', '3.9']
     steps:
     - uses: actions/checkout@v2
@@ -24,8 +24,7 @@ jobs:
       run: |
         conda config --set always_yes yes --set changeps1 no
         conda config --add channels conda-forge
-        conda install numpy=>1.20 scipy=>1.5 matplotlib=>3.0 h5py pip setuptools pyparsing pytest pytest-cov coverage scikit-learn cython pillow pandas sqlalchemy psutil pyyaml psycopg2-binary numdifftools emcee pymatgen
-        conda install tomopy wxpython
+        conda install python=${{ matrix.python-vesion }} numpy=>1.20 scipy=>1.5 matplotlib=>3.0 h5py pip setuptools pyparsing pytest pytest-cov coverage scikit-learn cython pillow pandas sqlalchemy psutil pyyaml psycopg2-binary numdifftools emcee pymatgen tomopy wxpython
         conda info -a
         conda list
     - name: Install xraylarch
