try another variation of appveyor

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,6 +5,8 @@ environment:
       MINICONDA: "C:\\Miniconda38-x64"
 
 install:
+    - printenv
+    - dir C:\
     - "%MINICONDA%\\Scripts\\activate.bat"
     - conda config --set always_yes yes --set changeps1 no
     - conda config --add channels conda-forge
