--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,11 +6,8 @@ environment:
 
 install:
     - printenv
-    - dir %MINICONDA%
-    - cd %MINICONDA%
-    - dir Scripts
-    - cd Scripts
-    - activate.bat
+    - dir C:\
+    - %MINICONDA%\\Scripts\\activate.bat
     - conda config --set always_yes yes --set changeps1 no
     - conda config --add channels conda-forge
     - conda install -yc conda-forge python=3.8.10 numpy=>1.20 scipy=>1.5 matplotlib=>3.0 h5py pip setuptools pyparsing pytest pytest-cov coverage scikit-learn cython pillow pandas sqlalchemy psutil pyyaml psycopg2-binary numdifftools emcee pymatgen tomopy wxpython
