update Actions scripts for better uniformity

--- a/.github/workflows/test-ubuntu.yml
+++ b/.github/workflows/test-ubuntu.yml
@@ -1,10 +1,10 @@
-name: Test with Windows, Miniconda
+name: Test with Ubuntu, Miniconda
 
 on: [push]
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
       fail-fast: false
