--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -27,7 +27,7 @@ jobs:
         conda list
     - name: Install xraylarch and other dependencies with pip
       run: |
-        pip install lmfit peakutils pyepics pyshortcuts termcolor sphinx dill pycifrw xraydb wxmplot wxutils
+        pip install lmfit peakutils pyepics pyshortcuts termcolor sphinx dill pycifrw xraydb wxmplot wxutils importlib-metadata
         python setup.py install
     - name: Run test suite
       run: |
