--- a/.github/workflows/test-ubuntu.yml
+++ b/.github/workflows/test-ubuntu.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Install xraylarch and other dependencies with pip
       run: |
         printenv
-	which pip
-        pip install lmfit peakutils pyepics pyshortcuts termcolor sphinx dill pycifrw xraydb wxmplot wxutils importlib-metadatadiff
+        which pip
+        pip install lmfit peakutils pyepics pyshortcuts termcolor sphinx dill pycifrw xraydb wxmplot wxutils importlib_metadata
         python setup.py install
     - name: Run test suite
       run: |
