--- a/.github/workflows/test-ubuntu.yml
+++ b/.github/workflows/test-ubuntu.yml
@@ -12,27 +12,24 @@ jobs:
         python-version: ['3.7', '3.8']
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - name: Set up Python from Miniconda
+      uses: conda-incubator/setup-miniconda@v2
       with:
-           python-version: ${{ matrix.python-version }}	  
-   - name: Add conda to system path
-     run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
+          auto-update-conda: true
+          python-version: ${{ matrix.python-version }}
     - name: Install conda dependencies
       run: |
         printenv
         conda config --set always_yes yes --set changeps1 no
         conda config --add channels conda-forge
-        conda install python=${{ matrix.python-version }} numpy=>1.20 scipy=>1.5 matplotlib=>3.0 h5py pip setuptools pyparsing pytest pytest-cov coverage scikit-learn cython pillow pandas sqlalchemy psutil pyyaml psycopg2-binary numdifftools emcee pymatgen tomopy wxpython importlib_metadata
+        conda install python=${{ matrix.python-version }} numpy scipy matplotlib h5py pip setuptools pyparsing pytest pytest-cov coverage scikit-learn cython pillow pandas sqlalchemy psutil pyyaml psycopg2-binary numdifftools emcee pymatgen tomopy wxpython importlib_metadata
         conda info -a
         conda list
     - name: Install xraylarch and other dependencies with pip
       run: |
         printenv
-        pip install wxmplot wxutils 
-        pip install lmfit peakutils pyepics pyshortcuts termcolor sphinx dill pycifrw xraydb 
+        pip install wxmplot wxutils
+        pip install lmfit peakutils pyepics pyshortcuts termcolor sphinx dill pycifrw xraydb
         python setup.py install
     - name: Run test suite
       run: |
