Fix github workflow for Ubuntu, python 3.7
Some X libraries are missing in github Ubuntu image and must be
manually installed for test to be successful.

--- a/.github/workflows/test-ubuntu.yml
+++ b/.github/workflows/test-ubuntu.yml
@@ -15,6 +15,11 @@ jobs:
         shell: bash -l {0}
     steps:
     - uses: actions/checkout@v2
+    - name: Install X system libraries for 3.7
+      if: ${{ matrix.python-version == '3.7'}}
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libxxf86vm1 libgtk2.0 libgtk2.0-dev
     - name: Set up Python from Miniconda
       uses: conda-incubator/setup-miniconda@v2
       with:
